--- a/app/src/main/res/layout/activity_resources.xml
+++ b/app/src/main/res/layout/activity_resources.xml
@@ -20,12 +20,12 @@
                 android:padding="20dp">
 
             <ImageView
-                    android:id="@+id/menu"
+                    android:id="@+id/back"
                     android:layout_width="20dp"
                     android:layout_height="20dp"
                     android:layout_alignParentLeft="true"
                     android:layout_centerVertical="true"
-                    android:src="@drawable/menu"
+                    android:src="@drawable/back_arrow"
                     app:tint="@color/color2" />
 
             <TextView
@@ -68,76 +68,24 @@
                     app:civ_border_overlay="true"
                     app:civ_circle_background_color="@color/white"/>
         </RelativeLayout>
-        <View
-                android:layout_width="match_parent"
-                android:layout_height="0.5dp"
-                android:background="@color/black"/>
 
-        <ScrollView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-            <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Categories"
+            android:textColor="@color/black"
+            android:padding="10dp"
+            android:textSize="17dp"
+            android:fontFamily="@font/poppinsmedium"/>
 
-                <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Publications"
-                        android:textColor="@color/color2"
-                        android:paddingTop="20dp"
-                        android:paddingLeft="20dp"
-                        android:textSize="15dp"
-                        android:fontFamily="@font/poppinsregular"/>
 
-                <GridView
-                        android:layout_width="fill_parent"
-                        android:layout_height="fill_parent"
-                        android:gravity="center"
-                        android:stretchMode="columnWidth"
-                        android:padding="20dp"
-                        android:scrollbars="horizontal"
-                        android:horizontalSpacing="10dp"
-                        android:verticalSpacing="10dp"
-                        android:id="@+id/mygrid"
-                        android:numColumns="3"/>
 
-                <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Policy Brief"
-                        android:textColor="@color/color2"
-                        android:paddingTop="20dp"
-                        android:paddingLeft="20dp"
-                        android:textSize="15dp"
-                        android:fontFamily="@font/poppinsregular"/>
-
-                <GridView
-                        android:layout_width="fill_parent"
-                        android:layout_height="fill_parent"
-                        android:gravity="center"
-                        android:stretchMode="columnWidth"
-                        android:padding="20dp"
-                        android:scrollbars="horizontal"
-                        android:horizontalSpacing="10dp"
-                        android:verticalSpacing="10dp"
-                        android:id="@+id/mygrid2"
-                        android:numColumns="3"/>
-
-                <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="GOTV Videos"
-                        android:textColor="@color/color2"
-                        android:paddingTop="20dp"
-                        android:paddingLeft="20dp"
-                        android:textSize="15dp"
-                        android:fontFamily="@font/poppinsregular"/>
-
-            </LinearLayout>
-        </ScrollView>
-
+        <ListView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:dividerHeight="0.1dp"
+            android:divider="@color/black"
+            android:id="@+id/listview"/>
 
 
 
@@ -150,6 +98,7 @@
             android:layout_width="250dp"
             android:layout_height="match_parent"
             android:layout_gravity="start"
+            app:menu="@null"
             app:headerLayout="@layout/navigation_header" >
     </com.google.android.material.navigation.NavigationView>
 
