--- a/app/src/main/res/layout/activity_resources.xml
+++ b/app/src/main/res/layout/activity_resources.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/drawer_layout"
+        android:orientation="vertical"
         tools:context=".Resources">
 
     <LinearLayout
@@ -69,23 +70,39 @@
                     app:civ_circle_background_color="@color/white"/>
         </RelativeLayout>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Categories"
-            android:textColor="@color/black"
-            android:padding="10dp"
-            android:textSize="17dp"
-            android:fontFamily="@font/poppinsmedium"/>
-
-
-
-        <ListView
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:dividerHeight="0.1dp"
-            android:divider="@color/black"
-            android:id="@+id/listview"/>
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Categories"
+                android:textColor="@color/black"
+                android:padding="10dp"
+                android:textSize="17dp"
+                android:id="@+id/mycat"
+                android:fontFamily="@font/poppinsmedium"/>
+
+
+            <ProgressBar
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:visibility="gone"
+                android:id="@+id/progressBar"/>
+
+            <ListView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:dividerHeight="0.1dp"
+                android:divider="@color/black"
+                android:layout_below="@+id/mycat"
+                android:id="@+id/listview"/>
+
+        </RelativeLayout>
+
+
 
 
 
@@ -93,14 +110,14 @@
 
 
 
-    <com.google.android.material.navigation.NavigationView
-            android:id="@+id/navigation"
-            android:layout_width="250dp"
-            android:layout_height="match_parent"
-            android:layout_gravity="start"
-            app:menu="@null"
-            app:headerLayout="@layout/navigation_header" >
-    </com.google.android.material.navigation.NavigationView>
+<!--    <com.google.android.material.navigation.NavigationView-->
+<!--            android:id="@+id/navigation"-->
+<!--            android:layout_width="250dp"-->
+<!--            android:layout_height="match_parent"-->
+<!--            android:layout_gravity="start"-->
+<!--            app:menu="@null"-->
+<!--            app:headerLayout="@layout/navigation_header" >-->
+<!--    </com.google.android.material.navigation.NavigationView>-->
 
 
 <!--    <com.google.android.material.navigation.NavigationView-->
@@ -114,4 +131,4 @@
 <!--            app:headerLayout="@layout/navigation_header2" >-->
 <!--    </com.google.android.material.navigation.NavigationView>-->
 
-</androidx.drawerlayout.widget.DrawerLayout>
+</LinearLayout>
