--- a/app/src/main/res/layout/event_item.xml
+++ b/app/src/main/res/layout/event_item.xml
@@ -5,9 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-
-
-
             <LinearLayout
                 android:layout_width="300dp"
                 android:layout_height="wrap_content"
@@ -20,8 +17,7 @@
                 <ImageView
                     android:layout_width="match_parent"
                     android:layout_height="300dp"
-                    android:id="@+id/image"
-                    android:src="@drawable/img2"/>
+                    android:id="@+id/image"/>
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="0.5dp"
