--- a/app/src/main/res/layout/jobs_item.xml
+++ b/app/src/main/res/layout/jobs_item.xml
@@ -13,12 +13,13 @@
         android:layout_marginRight="10dp"
         android:layout_marginBottom="30dp"
         android:layout_marginTop="30dp"
+        android:padding="40dp"
         android:id="@+id/card"
-        android:background="@drawable/card_like">
+        android:background="@drawable/white_card">
 
         <ImageView
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
             android:layout_gravity="center"
             android:id="@+id/image"/>
 
@@ -28,6 +29,7 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/poppinsmedium"
             android:padding="10dp"
+            android:gravity="center"
             android:text=""
             android:layout_gravity="center"
             android:textColor="#000000"
@@ -38,6 +40,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:gravity="center"
             android:id="@+id/location"
             android:text=""
             android:textSize="10dp"
@@ -52,6 +55,7 @@
             android:text=""
             android:textSize="14dp"
             android:textColor="@color/color2"
+            android:gravity="center"
             android:fontFamily="@font/poppinsregular"
             android:layout_marginBottom="10dp"/>
 
