--- a/app/src/main/res/layout/activity_all_users.xml
+++ b/app/src/main/res/layout/activity_all_users.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:orientation="vertical"
         android:id="@+id/drawer_layout"
         tools:context=".AllUsers">
 
@@ -14,59 +15,61 @@
             android:background="@color/white">
 
         <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/white"
-                android:padding="20dp">
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/white"
+            android:padding="20dp">
 
             <ImageView
-                    android:id="@+id/menu"
-                    android:layout_width="20dp"
-                    android:layout_height="20dp"
-                    android:layout_alignParentLeft="true"
-                    android:layout_centerVertical="true"
-                    android:src="@drawable/menu"
-                    app:tint="@color/color2" />
+                android:id="@+id/back"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_alignParentLeft="true"
+                android:layout_centerVertical="true"
+                android:src="@drawable/back_arrow"
+                app:tint="@color/color2" />
 
             <TextView
-                    android:id="@+id/register"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginRight="15dp"
-                    android:layout_toLeftOf="@+id/user"
-                    android:fontFamily="@font/poppinslight"
-                    android:text="Register"
-                    android:textColor="@color/black"
-                    android:textSize="10dp" />
+                android:id="@+id/register"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="15dp"
+                android:layout_toLeftOf="@+id/user"
+                android:fontFamily="@font/poppinslight"
+                android:visibility="gone"
+                android:text="Register"
+                android:textColor="@color/black"
+                android:textSize="10dp" />
 
             <TextView
-                    android:id="@+id/login"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginRight="10dp"
-                    android:layout_toLeftOf="@+id/register"
-                    android:fontFamily="@font/poppinslight"
-                    android:text="Login"
-                    android:textColor="@color/black"
-                    android:textSize="10dp" />
+                android:id="@+id/login"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_toLeftOf="@+id/register"
+                android:fontFamily="@font/poppinslight"
+                android:visibility="gone"
+                android:text="Login"
+                android:textColor="@color/black"
+                android:textSize="10dp" />
 
             <de.hdodenhof.circleimageview.CircleImageView
-                    android:layout_width="20dp"
-                    android:layout_height="20dp"
-                    android:src="@drawable/user"
-                    android:tint="@color/white"
-                    android:id="@+id/user"
-                    android:backgroundTint="@color/white"
-                    android:layout_alignParentRight="true"
-                    android:layout_centerVertical="true"
-                    app:civ_border_color="@color/color2"
-                    app:civ_border_width="0.5dp"
-                    app:civ_border_overlay="true"
-                    app:civ_circle_background_color="@color/white"/>
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:src="@drawable/user"
+                android:tint="@color/white"
+                android:id="@+id/user"
+                android:backgroundTint="@color/white"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                app:civ_border_color="@color/color2"
+                app:civ_border_width="0.5dp"
+                app:civ_border_overlay="true"
+                app:civ_circle_background_color="@color/white"/>
         </RelativeLayout>
         <View
                 android:layout_width="match_parent"
@@ -110,15 +113,4 @@
     </LinearLayout>
 
 
-
-    <com.google.android.material.navigation.NavigationView
-            android:id="@+id/navigation"
-            android:layout_width="250dp"
-            android:layout_height="match_parent"
-            android:layout_gravity="start"
-            app:menu="@null"
-            app:headerLayout="@layout/navigation_header" >
-    </com.google.android.material.navigation.NavigationView>
-
-
-</androidx.drawerlayout.widget.DrawerLayout>
+</LinearLayout>
