--- a/app/src/main/res/layout/activity_event_detail.xml
+++ b/app/src/main/res/layout/activity_event_detail.xml
@@ -65,7 +65,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="300dp"
                     android:id="@+id/image"
-                    android:src="@drawable/img3"/>
+                    android:src="@drawable/img4"/>
                 <TextView
                     android:id="@+id/event_title"
                     android:layout_width="wrap_content"
@@ -73,7 +73,7 @@
                     android:fontFamily="@font/poppinsmedium"
                     android:paddingTop="10dp"
                     android:paddingBottom="30dp"
-                    android:text="Peer to Peer Virtual Sessions on Hate Speech Education"
+                    android:text=""
                     android:textColor="#000000"
                     android:textSize="16dp"
                     android:textStyle="bold" />
@@ -110,7 +110,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:id="@+id/date"
-                                android:text="Aug 10 2022"
+                                android:text=""
                                 android:textSize="10dp"
                                 android:textStyle="normal"
                                 android:textColor="@color/black"
@@ -257,7 +257,7 @@
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="Virtual"
+                                android:text="9jaTalks"
                                 android:textSize="10dp"
                                 android:textStyle="normal"
                                 android:textColor="@color/black"
@@ -289,7 +289,7 @@
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="SEARCH"
+                                android:text="9jaTalks"
                                 android:textSize="10dp"
                                 android:textStyle="normal"
                                 android:textColor="@color/black"
@@ -312,6 +312,7 @@
                         android:padding="10dp"
                         android:text="+Add to Google Calendar"
                         android:textSize="10dp"
+                        android:id="@+id/add_calendar"
                         android:textColor="@color/color2"
                         android:textStyle="normal"
                         android:fontFamily="@font/poppinslight"/>
@@ -322,6 +323,7 @@
                         android:layout_marginRight="20dp"
                         android:layout_marginLeft="20dp"
                         android:layout_marginBottom="20dp"
+                        android:visibility="gone"
                         android:padding="10dp"
                         android:text="+iCal / Outlook export"
                         android:textSize="10dp"
@@ -378,21 +380,25 @@
                             android:layout_width="40dp"
                             android:layout_height="40dp"
                             android:layout_margin="10dp"
+                            android:id="@+id/facebook"
                             android:src="@drawable/facebook"/>
                         <ImageView
                             android:layout_width="40dp"
                             android:layout_height="40dp"
                             android:layout_margin="10dp"
+                            android:id="@+id/twitter"
                             android:src="@drawable/twitter"/>
                         <ImageView
                             android:layout_width="40dp"
                             android:layout_height="40dp"
                             android:layout_margin="10dp"
-                            android:src="@drawable/linkedin"/>
+                            android:id="@+id/gmail"
+                            android:src="@drawable/gmail"/>
                         <ImageView
                             android:layout_width="40dp"
                             android:layout_height="40dp"
                             android:layout_margin="10dp"
+                            android:id="@+id/instagram"
                             android:src="@drawable/instagram"/>
                     </LinearLayout>
 
