--- a/app/src/main/res/layout/activity_events.xml
+++ b/app/src/main/res/layout/activity_events.xml
@@ -14,8 +14,18 @@
         android:background="@color/color1"
         android:padding="20dp">
         <ImageView
+            android:id="@+id/back"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_alignParentLeft="true"
+            android:layout_centerVertical="true"
+            android:src="@drawable/back_arrow"
+            app:tint="@color/color2" />
+
+        <ImageView
             android:layout_width="80dp"
             android:layout_height="20dp"
+            android:layout_marginLeft="10dp"
             android:layout_centerVertical="true"
             android:layout_alignParentLeft="true"
             android:src="@drawable/logo"/>
@@ -24,6 +34,7 @@
             android:id="@+id/menu"
             android:layout_width="20dp"
             android:layout_height="20dp"
+            android:visibility="invisible"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:src="@drawable/menu" />
@@ -61,6 +72,13 @@
         android:layout_height="wrap_content"
         android:background="#f2f3f5"
         android:layout_marginBottom="10dp">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/logo2"
+            android:visibility="gone"
+            android:id="@+id/logo"/>
 
         <TextView
             android:layout_width="wrap_content"
