--- a/app/src/main/res/layout/activity_groups.xml
+++ b/app/src/main/res/layout/activity_groups.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/drawer_layout"
+        android:orientation="vertical"
         tools:context=".Groups">
 
     <LinearLayout
@@ -14,59 +14,59 @@
             android:background="@color/white">
 
         <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/white"
-                android:padding="20dp">
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/white"
+            android:padding="20dp">
 
             <ImageView
-                    android:id="@+id/menu"
-                    android:layout_width="20dp"
-                    android:layout_height="20dp"
-                    android:layout_alignParentLeft="true"
-                    android:layout_centerVertical="true"
-                    android:src="@drawable/menu"
-                    app:tint="@color/color2" />
+                android:id="@+id/back"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_alignParentLeft="true"
+                android:layout_centerVertical="true"
+                android:src="@drawable/back_arrow"
+                app:tint="@color/color2" />
 
             <TextView
-                    android:id="@+id/register"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginRight="15dp"
-                    android:layout_toLeftOf="@+id/user"
-                    android:fontFamily="@font/poppinslight"
-                    android:text="Register"
-                    android:textColor="@color/black"
-                    android:textSize="10dp" />
+                android:id="@+id/register"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="15dp"
+                android:layout_toLeftOf="@+id/user"
+                android:fontFamily="@font/poppinslight"
+                android:text="Register"
+                android:textColor="@color/black"
+                android:textSize="10dp" />
 
             <TextView
-                    android:id="@+id/login"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginRight="10dp"
-                    android:layout_toLeftOf="@+id/register"
-                    android:fontFamily="@font/poppinslight"
-                    android:text="Login"
-                    android:textColor="@color/black"
-                    android:textSize="10dp" />
+                android:id="@+id/login"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_toLeftOf="@+id/register"
+                android:fontFamily="@font/poppinslight"
+                android:text="Login"
+                android:textColor="@color/black"
+                android:textSize="10dp" />
 
             <de.hdodenhof.circleimageview.CircleImageView
-                    android:layout_width="20dp"
-                    android:layout_height="20dp"
-                    android:src="@drawable/user"
-                    android:tint="@color/white"
-                    android:id="@+id/user"
-                    android:backgroundTint="@color/white"
-                    android:layout_alignParentRight="true"
-                    android:layout_centerVertical="true"
-                    app:civ_border_color="@color/color2"
-                    app:civ_border_width="0.5dp"
-                    app:civ_border_overlay="true"
-                    app:civ_circle_background_color="@color/white"/>
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:src="@drawable/user"
+                android:tint="@color/white"
+                android:id="@+id/user"
+                android:backgroundTint="@color/white"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                app:civ_border_color="@color/color2"
+                app:civ_border_width="0.5dp"
+                app:civ_border_overlay="true"
+                app:civ_circle_background_color="@color/white"/>
         </RelativeLayout>
         <View
                 android:layout_width="match_parent"
@@ -91,6 +91,37 @@
                     android:fontFamily="@font/poppinsmedium"
                     android:textSize="12dp"/>
 
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:padding="10dp"
+                android:layout_marginBottom="10dp"
+                android:layout_marginTop="20dp"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:id="@+id/facebook_login"
+                android:background="@drawable/facebook_blue">
+                <ImageView
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:src="@drawable/facebook"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="10dp"
+                    android:textColor="#ffffff"
+                    android:text="Login with Facebook"/>
+            </LinearLayout>
+
+<!--            <com.facebook.login.widget.LoginButton-->
+<!--                android:id="@+id/login_button"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_gravity="center_horizontal"-->
+<!--                android:layout_marginTop="30dp"-->
+<!--                android:layout_marginBottom="30dp" />-->
+
             <ListView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
@@ -104,14 +135,14 @@
 
 
 
-    <com.google.android.material.navigation.NavigationView
-            android:id="@+id/navigation"
-            android:layout_width="250dp"
-            android:layout_height="match_parent"
-            android:layout_gravity="start"
-            app:menu="@null"
-            app:headerLayout="@layout/navigation_header" >
-    </com.google.android.material.navigation.NavigationView>
+<!--    <com.google.android.material.navigation.NavigationView-->
+<!--            android:id="@+id/navigation"-->
+<!--            android:layout_width="250dp"-->
+<!--            android:layout_height="match_parent"-->
+<!--            android:layout_gravity="start"-->
+<!--            app:menu="@null"-->
+<!--            app:headerLayout="@layout/navigation_header" >-->
+<!--    </com.google.android.material.navigation.NavigationView>-->
 
 
-</androidx.drawerlayout.widget.DrawerLayout>
+</LinearLayout>
