--- a/app/src/main/res/layout/custom_popup_login.xml
+++ b/app/src/main/res/layout/custom_popup_login.xml
@@ -132,16 +132,16 @@
                 android:layout_marginRight="20dp">
 
             <CheckBox
-                    android:id="@+id/remember"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentLeft="true"
-                    android:layout_centerVertical="true"
-                    android:buttonTint="#5e000000"
-                    android:fontFamily="@font/poppinsregular"
-                    android:text="Remember Me"
-                    android:textColor="#5e000000"
-                    android:textSize="10dp" />
+                android:id="@+id/remember"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_centerVertical="true"
+                android:buttonTint="#5e000000"
+                android:fontFamily="@font/poppinsregular"
+                android:text="Remember Me"
+                android:textColor="#5e000000"
+                android:textSize="10dp" />
 
             <TextView
                     android:layout_width="wrap_content"
@@ -154,6 +154,21 @@
                     android:textColor="#5e000000"
                     android:textSize="10dp" />
         </RelativeLayout>
+        <ProgressBar
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:id="@+id/progressBar"
+            android:visibility="gone"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Loading"
+            android:textSize="10dp"
+            android:textColor="#000000"
+            android:id="@+id/loadingtext"
+            android:layout_gravity="center"
+            android:visibility="gone"/>
 
         <Button
                 android:layout_width="match_parent"
@@ -164,6 +179,7 @@
                 android:textAllCaps="false"
                 android:textSize="10dp"
                 android:textColor="@color/white"
+                android:id="@+id/login"
                 android:fontFamily="@font/poppinsmedium"/>
 
         <TextView
