--- a/app/src/main/res/layout/event_item.xml
+++ b/app/src/main/res/layout/event_item.xml
@@ -18,6 +18,12 @@
                     android:layout_width="match_parent"
                     android:layout_height="300dp"
                     android:id="@+id/image"/>
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/logo2"
+                    android:visibility="gone"
+                    android:id="@+id/logo"/>
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="0.5dp"
@@ -177,13 +183,14 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/rel1">
+
             <ImageView
                 android:id="@+id/btnshare"
                 android:layout_width="25dp"
                 android:layout_height="25dp"
                 android:layout_alignParentLeft="true"
-                android:layout_marginStart="10dp"
                 android:layout_centerVertical="true"
+                android:layout_marginStart="10dp"
                 android:layout_marginEnd="10dp"
                 android:layout_marginBottom="10dp"
                 android:src="@drawable/share"
@@ -251,21 +258,25 @@
                     android:layout_width="30dp"
                     android:layout_height="30dp"
                     android:layout_margin="15dp"
+                    android:id="@+id/pic_facebook"
                     android:src="@drawable/facebook"/>
                 <ImageView
                     android:layout_width="30dp"
                     android:layout_height="30dp"
                     android:layout_margin="15dp"
+                    android:id="@+id/pic_twitter"
                     android:src="@drawable/twitter"/>
                 <ImageView
                     android:layout_width="30dp"
                     android:layout_height="30dp"
                     android:layout_margin="15dp"
-                    android:src="@drawable/linkedin"/>
+                    android:id="@+id/pic_gmail"
+                    android:src="@drawable/gmail"/>
                 <ImageView
                     android:layout_width="30dp"
                     android:layout_height="30dp"
                     android:layout_margin="15dp"
+                    android:id="@+id/pic_instagram"
                     android:src="@drawable/instagram"/>
             </LinearLayout>
 
