--- a/app/src/main/res/layout/resources_view.xml
+++ b/app/src/main/res/layout/resources_view.xml
@@ -17,8 +17,9 @@
         <Button
             android:id="@+id/btn_title"
             android:layout_width="30dp"
-            android:layout_height="40dp"
-            android:background="#f5a142" />
+            android:layout_height="30dp"
+            android:layout_centerVertical="true"
+            android:background="@drawable/categories" />
 
         <TextView
             android:layout_width="wrap_content"
