--- a/app/src/main/res/menu/menu_unregisered_user.xml
+++ b/app/src/main/res/menu/menu_unregisered_user.xml
@@ -18,14 +18,14 @@
         <item
                 android:id="@+id/events"
                 android:title="Events" />
-        <item
-                android:id="@+id/news"
-                android:title="News" />
+<!--        <item-->
+<!--                android:id="@+id/news"-->
+<!--                android:title="News" />-->
         <item
                 android:id="@+id/opportunities"
                 android:title="Opportunities" />
-        <item
-                android:id="@+id/hangout"
-                android:title="Expert Hangout" />
+<!--        <item-->
+<!--                android:id="@+id/hangout"-->
+<!--                android:title="Expert Hangout" />-->
     </group>
 </menu>
